--- a/README.qmd
+++ b/README.qmd
@@ -1,21 +1,22 @@
 ---
-title: "
-
-Q1: How can we best predict each firm’s lobbying spending on the Waxman-Markey bill?
-Q2: How do certain characteristics of a company predict how much money they'll spend on lobbying for the Waxman-Markey bill?
-"
+title: "Lobbying Markdown"
 format: gfm
 editor: visual
 ---
 
+## Title
+
+Q1: How can we best predict each firm’s lobbying spending on the Waxman-Markey bill?
+
+Q2: How do certain characteristics of a company predict how much money they'll spend on lobbying for the Waxman-Markey bill?
+
 ## Introduction
 
-     Lobbying is an important feature of representation in the US government as it can help those without voices be reached. In the corporate world, lobbying can also be used by businesses to support or oppose bills and legislation that improve or harm their profit margins. These companies may employ lobbyists to work on their behalf, or they can hire a lobbying firm to act on their behalf and make their case to legislators for why a bill should be supported or opposed. Because of the influence lobbying can hold over politics, the process has multiple rules and policies in place to insure that misconduct is not jeopardizing this feature of government representation. Organizations must register if they employ a lobbyist, and lobbyists must register when they meet certain requirements. The Lobbying Disclosure Act of 1995 mandated that lobbying is publicly registered, and much of this data is available on OpenSecrets.org. Despite these policies, many Americans believe that lobbying is a feature of government corruption that sways laws and politicians into the pockets of wealthy business owners. The importance of our research and project is to verify these concerns and allow for a more transparent review of the lobbying sector. The relevant bill our study focuses on is the Waxman-Markey Bill. The goal of the bill was to establish limits on emissions for several greenhouse gasses. On June 26th, 2009, the bill narrowly passed the House, but, due to a special election in 2010 as well as other factors, the Senate majority leader never brought it to the Senate for a vote and it was ultimately never implemented. Since then, multiple other bills related to limiting greenhouse gas emissions have reached the house floor, such as the Energy Innovation and Carbon Dividend Act, which suggests charging companies for their carbon pollution. If implementing these measures would cost a company money and/or potential revenue, it is logical to assume, then, that these corporations could be incentivized to lobby against these bills, as doing so would ultimately be less expensive than implementing the bill and losing revenue. As it turns out, lobbying is not immune to corruption. “Shadow lobbying” is lobbying done by people who are not registered as lobbyists. People can seek to influence politicians' stances on issues without being technically "lobbyists." This creates huge problems for tracking the money in politics. Slobozhan et al. (2022) investigated the prominence of shadow lobbying. The paper collected a list of all bills after and including the year 2000 and subtracted all bills that were registered to have been lobbied for or against on OpenSecrets. The researchers then analyzed the remaining bills to examine the probability that they were lobbied but not reported, or if they were simply not lobbied. The paper states that it infers that a significant amount of bills had lobbying activity that was not reported properly. We strive to build further on this research. One problem is that, while a bill might have technically reported lobbying, the actual amount spent may be underreported. This problem was not investigated in the prior study because they only looked at bills without any reported lobbying. Our research will create a model that develops a theoretical amount spent on lobbying for a climate bill similar to Waxman-Markey, then will compare to the actual amount, allowing us to assess the likelihood that a bill’s lobbying was underreported. We will create a model that will predict lobbying expenditure for a company–theoretically, how much money a company will spend on lobbying for the Waxman-Markey Bill. Greenhouse gas emissions , sector, and stock value will be the inputs that will be used to generate the output value. The model will be trained with data from the Waxman-Markey bill, then applied to similar bills that aimed to reduce GHG emissions. Another hope is that this model can help prevent underreporting of lobbying, as, if there is a severe disparity between the predicted number and reported amount of money spent on policies related to climate change, the bill and its related parties can be investigated further for potential lobbying misconduct.
-     
-     
+Lobbying is an important feature of representation in the US government as it can help those without voices be reached. In the corporate world, lobbying can also be used by businesses to support or oppose bills and legislation that improve or harm their profit margins. These companies may employ lobbyists to work on their behalf, or they can hire a lobbying firm to act on their behalf and make their case to legislators for why a bill should be supported or opposed. Because of the influence lobbying can hold over politics, the process has multiple rules and policies in place to insure that misconduct is not jeopardizing this feature of government representation. Organizations must register if they employ a lobbyist, and lobbyists must register when they meet certain requirements. The Lobbying Disclosure Act of 1995 mandated that lobbying is publicly registered, and much of this data is available on OpenSecrets.org. Despite these policies, many Americans believe that lobbying is a feature of government corruption that sways laws and politicians into the pockets of wealthy business owners. The importance of our research and project is to verify these concerns and allow for a more transparent review of the lobbying sector. The relevant bill our study focuses on is the Waxman-Markey Bill. The goal of the bill was to establish limits on emissions for several greenhouse gasses. On June 26th, 2009, the bill narrowly passed the House, but, due to a special election in 2010 as well as other factors, the Senate majority leader never brought it to the Senate for a vote and it was ultimately never implemented. Since then, multiple other bills related to limiting greenhouse gas emissions have reached the house floor, such as the Energy Innovation and Carbon Dividend Act, which suggests charging companies for their carbon pollution. If implementing these measures would cost a company money and/or potential revenue, it is logical to assume, then, that these corporations could be incentivized to lobby against these bills, as doing so would ultimately be less expensive than implementing the bill and losing revenue. As it turns out, lobbying is not immune to corruption. “Shadow lobbying” is lobbying done by people who are not registered as lobbyists. People can seek to influence politicians' stances on issues without being technically "lobbyists." This creates huge problems for tracking the money in politics. Slobozhan et al. (2022) investigated the prominence of shadow lobbying. The paper collected a list of all bills after and including the year 2000 and subtracted all bills that were registered to have been lobbied for or against on OpenSecrets. The researchers then analyzed the remaining bills to examine the probability that they were lobbied but not reported, or if they were simply not lobbied. The paper states that it infers that a significant amount of bills had lobbying activity that was not reported properly. We strive to build further on this research. One problem is that, while a bill might have technically reported lobbying, the actual amount spent may be underreported. This problem was not investigated in the prior study because they only looked at bills without any reported lobbying. Our research will create a model that develops a theoretical amount spent on lobbying for a climate bill similar to Waxman-Markey, then will compare to the actual amount, allowing us to assess the likelihood that a bill’s lobbying was underreported. We will create a model that will predict lobbying expenditure for a company–theoretically, how much money a company will spend on lobbying for the Waxman-Markey Bill. Greenhouse gas emissions , sector, and stock value will be the inputs that will be used to generate the output value. The model will be trained with data from the Waxman-Markey bill, then applied to similar bills that aimed to reduce GHG emissions. Another hope is that this model can help prevent underreporting of lobbying, as, if there is a severe disparity between the predicted number and reported amount of money spent on policies related to climate change, the bill and its related parties can be investigated further for potential lobbying misconduct.
+
 ## Literature Review
 
-     Our predictive modeling was inherited from research done that similarly predicted the lobbying behavior of corporations (Meng & Rode, 2019). Previous research used regression modeling systems to predict company values, serving to uncover relationships between lobbying expenditures and whether or not a bill has been passed (Meng & Rode, 2019). Additionally, Brulle (2016) used sectoral analysis to predict lobbying expenditures, resulting in findings which indicate that fossil fuel industries lobby the most, especially in comparison to renewable energy companies and environmental advocacy organizations. This, alongside previous research from Meng & Rode (2019), establishes correlations to fossil fuel lobbying expenditures and the failure of policy. It’s worth noting that climate lobbying only accounts for 2.9% of lobbying in the United States (Brulle 2016). Despite this, billions of dollars are spent annually in lobbying efforts to deter policy implementation. In addition, some of these lobbying efforts routinely go unaccounted for as a result of shadow lobbying, as the Lobbying Disclosure Act is only required to account for bills lobbied by registered lobbyists. Similarly to prior analysis of the Waxman-Markey bill, regression modeling can be used to predict whether or not a bill has been secretly lobbied (Slobozhan et al., 2020) These parallels help set the foundations for what we wish to build off as it comes to expanding our research. For example, our research still relies on sectoral analysis as a determiner of similarly researched explanatory variables (e.g. revenue share). In this case, our desired expansion involves providing additional data on companies whose carbon emissions greatly differ from the companies included in prior datasets. For example, our dataset includes firms that did not lobby against the Waxman-Markey bill. This allows us to more accurately predict lobbying expenditure correlations by including more zeroes, reducing inflation in our initial dataset. This accuracy will come at the forefront in our goal of not only predicting the implementation of the Waxman-Markey bill, but predicting implementations of similar environmental policy bills, such as the priorly mentioned Energy Innovation Act, as a model in analyzing social costs. Our desired accuracy also allows our research to extend beyond typical social cost nomenclature and to an approach that analyzes both private costs and benefits. We want to explore whether or not the fate of environmental policy not only poses consequences to society, but consequences to lobbying firms, corporations, and Congress. Ultimately, our research will build upon prior analysis of climate lobbying’s social costs into an exploration of the benefits firms receive from lobbying and extend that to societal determinants and implications.
+Our predictive modeling was inherited from research done that similarly predicted the lobbying behavior of corporations (Meng & Rode, 2019). Previous research used regression modeling systems to predict company values, serving to uncover relationships between lobbying expenditures and whether or not a bill has been passed (Meng & Rode, 2019). Additionally, Brulle (2016) used sectoral analysis to predict lobbying expenditures, resulting in findings which indicate that fossil fuel industries lobby the most, especially in comparison to renewable energy companies and environmental advocacy organizations. This, alongside previous research from Meng & Rode (2019), establishes correlations to fossil fuel lobbying expenditures and the failure of policy. It’s worth noting that climate lobbying only accounts for 2.9% of lobbying in the United States (Brulle 2016). Despite this, billions of dollars are spent annually in lobbying efforts to deter policy implementation. In addition, some of these lobbying efforts routinely go unaccounted for as a result of shadow lobbying, as the Lobbying Disclosure Act is only required to account for bills lobbied by registered lobbyists. Similarly to prior analysis of the Waxman-Markey bill, regression modeling can be used to predict whether or not a bill has been secretly lobbied (Slobozhan et al., 2020) These parallels help set the foundations for what we wish to build off as it comes to expanding our research. For example, our research still relies on sectoral analysis as a determiner of similarly researched explanatory variables (e.g. revenue share). In this case, our desired expansion involves providing additional data on companies whose carbon emissions greatly differ from the companies included in prior datasets. For example, our dataset includes firms that did not lobby against the Waxman-Markey bill. This allows us to more accurately predict lobbying expenditure correlations by including more zeroes, reducing inflation in our initial dataset. This accuracy will come at the forefront in our goal of not only predicting the implementation of the Waxman-Markey bill, but predicting implementations of similar environmental policy bills, such as the priorly mentioned Energy Innovation Act, as a model in analyzing social costs. Our desired accuracy also allows our research to extend beyond typical social cost nomenclature and to an approach that analyzes both private costs and benefits. We want to explore whether or not the fate of environmental policy not only poses consequences to society, but consequences to lobbying firms, corporations, and Congress. Ultimately, our research will build upon prior analysis of climate lobbying’s social costs into an exploration of the benefits firms receive from lobbying and extend that to societal determinants and implications.
 
 ## Data Description
 
@@ -98,9 +99,7 @@ Step 10: Change the filename to README.qmd. Render the document
 
 Step 11: Push the document back to GitHub and observe your beautiful document in your repository!
 
-
 ## Sources in APA
-
 
 Bogardus, K., & Reilly , A. (2016, June 27). 7 years later, failed Waxman-Markey bill still makes waves. E&E News by POLITICO. http://www.eenews.net/articles/7-years-later-failed-waxman-markey-bill-still-makes-waves/
 
@@ -110,19 +109,18 @@ Brulle, R.J. The climate lobby: a sectoral analysis of lobbying spending on clim
 
 Butler, D. M., & Miller, D. R. (2022). Does Lobbying Affect Bill Advancement? Evidence from Three State Legislatures. Political Research Quarterly, 75(3), 547-561. https://doi.org/10.1177/10659129211012481
 
-Cabral, S., Krasner, D., & Doubledee, R. (2023, May 2). Calls for transparency around corporate political spend are growing louder. Just 31% of America’s largest companies currently disclose. JUST Capital. https://justcapital.com/news/31-percent-of-americas-largest-companies-disclose-lobbying-political-contributions/#:~:text=The%20state%20of%20political%20spend,the%20companies%20in%20our%20Rankings
+Cabral, S., Krasner, D., & Doubledee, R. (2023, May 2). Calls for transparency around corporate political spend are growing louder. Just 31% of America’s largest companies currently disclose. JUST Capital. https://justcapital.com/news/31-percent-of-americas-largest-companies-disclose-lobbying-political-contributions/#:\~:text=The%20state%20of%20political%20spend,the%20companies%20in%20our%20Rankings
 
 Chen, J. (2024, August 28). Lobby: What it is, how it works, examples. Investopedia. https://www.investopedia.com/terms/l/lobby.asp
 
 Hill, M.D., Kelly, G.W., Lockhart, G.B. and Van Ness, R.A. (2013), Determinants and Effects of Corporate Lobbying. Financial Management, 42: 931-957. https://doi.org/10.1111/fima.12032
 
-Meng, Kyle C.; Rode, Ashwin (2019). Data from: The social cost of lobbying over climate policy [Dataset]. Dryad. https://doi.org/10.5061/dryad.gg4pk7d
-Polluters pay. people get a carbon cashback. Energy Innovation and Carbon Dividend Act. (2023, September 28). https://energyinnovationact.org/
+Meng, Kyle C.; Rode, Ashwin (2019). Data from: The social cost of lobbying over climate policy \[Dataset\]. Dryad. https://doi.org/10.5061/dryad.gg4pk7d Polluters pay. people get a carbon cashback. Energy Innovation and Carbon Dividend Act. (2023, September 28). https://energyinnovationact.org/
 
-Segal, T. (2022, July 20). Bribery vs. lobbying: What’s the difference? Investopedia. https://www.investopedia.com/financial-edge/0912/the-differences-between-bribery-and-lobbying.aspx#:~:text=Bribery%20is%20considered%20an%20effort,illegal%2C%20while%20lobbying%20is%20not
+Segal, T. (2022, July 20). Bribery vs. lobbying: What’s the difference? Investopedia. https://www.investopedia.com/financial-edge/0912/the-differences-between-bribery-and-lobbying.aspx#:\~:text=Bribery%20is%20considered%20an%20effort,illegal%2C%20while%20lobbying%20is%20not
 
 Slobozhan, I., Ormosi, P., Sharma, R. (2020). Which Bills Are Lobbied? Predicting and Interpreting Lobbying Activity in the US. In: Song, M., Song, IY., Kotsis, G., Tjoa, A.M., Khalil, I. (eds) Big Data Analytics and Knowledge Discovery. DaWaK 2020. Lecture Notes in Computer Science(), vol 12393. Springer, Cham. https://doi.org/10.1007/978-3-030-59065-9_23
 
 Slobozhan, I., Ormosi, P., & Sharma, R. (2022). Detecting shadow lobbying. Social Network Analysis and Mining, 12(1), 48.
 
-Weiser, D. (2024, September 20). Why lobbying is legal and important in the U.S. Investopedia. https://www.investopedia.com/articles/investing/043015/why-lobbying-legal-and-important-us.asp#:~:text=Lobbying%20is%20an%20integral%20part,participation%20in%20our%20democratic%20environment
+Weiser, D. (2024, September 20). Why lobbying is legal and important in the U.S. Investopedia. https://www.investopedia.com/articles/investing/043015/why-lobbying-legal-and-important-us.asp#:\~:text=Lobbying%20is%20an%20integral%20part,participation%20in%20our%20democratic%20environment
